--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Book app</string>
+    <string name="new_user_signup">New User? <b>Sign up</b></string>
 </resources>
